--- a/index.html
+++ b/index.html
@@ -66,21 +66,21 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="img/slide1.jpg" href="#a-photo" alt="Photography slide">
+              <img class="d-block w-100" src="img/slide1.jpg" alt="Photography slide">
               <div class="carousel-caption d-none d-md-block">
                 <h4>Photography</h4>
                 <p>Photos I took of things.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="img/slide2.jpg" href="#a-code" alt="Code slide">
+              <img class="d-block w-100" src="img/slide2.jpg" alt="Code slide">
               <div class="carousel-caption d-none d-md-block">
                 <h4>Code</h4>
                 <p>Code I've written about things.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="img/slide3.jpg" href="#a-wood" alt="Woodworking slide">
+              <img class="d-block w-100" src="img/slide3.jpg" alt="Woodworking slide">
               <div class="carousel-caption d-none d-md-block">
                 <h4>Woodworking</h4>
                 <p>Wood I've worked with and things.</p>
@@ -106,7 +106,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="img/photo1.jpg">
+              <img src="img/photo1.jpg" alt="Photograhpy">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
@@ -120,16 +120,14 @@
           </div>
         </div>
       </div>
-    </section>
     <br>
     <hr>
     <!-- Code Section -->
-    <section id="showcase">
       <div id="a-code" class="container">
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="img/photo2.jpg">
+              <img src="img/photo2.jpg" alt="Code writing">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
@@ -143,16 +141,14 @@
           </div>
         </div>
       </div>
-    </section>
     <br>
     <hr>
     <!-- Woodworking Section -->
-    <section id="showcase">
       <div id="a-wood" class="container">
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="img/photo3.jpg">
+              <img src="img/photo3.jpg" alt="Wood working">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
